Fix header text to align with grid

--- a/app/assets/stylesheets/dreams.css.sass
+++ b/app/assets/stylesheets/dreams.css.sass
@@ -3,7 +3,7 @@ header
     margin-left: 5px
 
   .buttons
-    margin: 15px 0
+    margin: 25px 0 10px
 
   .done
     font-size: 0.9em
