--- a/app/assets/stylesheets/scaffold.css.sass
+++ b/app/assets/stylesheets/scaffold.css.sass
@@ -9,6 +9,7 @@ header
 
   h1
     display: inline-block
+    font-size: 40px
     font-variant: small-caps
     font-weight: bold
 
@@ -17,7 +18,7 @@ header
 
   .user-name
     font-weight: normal
-    margin-left: 28px
+    margin-left: 22px
 
 button, i
   text-decoration: none
